# Darkbluff

./: .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md
crates/darkbluff/: Cargo.toml
crates/darkbluff-core/: Cargo.toml
crates/darkbluff-core/src/: lib.rs  world.rs
crates/darkbluff-core/tests/: checker.rs  content_engine.rs  e2e.rs  session.rs  trigger.rs
crates/darkbluff-tui/: Cargo.toml
crates/darkbluff-tui/src/: app.rs  command.rs  input.rs  lib.rs  markdown.rs  terminal.rs  theme.rs  view.rs
crates/darkbluff/src/: cli.rs  log.rs  main.rs
data/chapters/the_apprentices_envy/: chapter.yaml  intro.md  judgments.yaml
data/chapters/the_rage_chapter/: chapter.yaml  intro.md  judgments.yaml  outro.md
data/chapters/the_vendors_pride/: chapter.yaml  clues.yaml  intro.md  judgments.yaml
data/characters/: butcher_apprentice.yaml  market_vendor.yaml  tavern_keeper.yaml
data/scenes/: alley.yaml  bridge.yaml  clinic.yaml  market.yaml  shacks.yaml  tavern.yaml
docs/: architecture.md  commands.md  content-engine.md  data-formats.md  design.md  gameplay.md  glossary.md  narrative.md  save-system.md
docs/narrative/: characters.md  rules.md  storyline.md  worldview.md
src/: cli.rs  error.rs  lib.rs  log.rs  main.rs
src/content/: condition.rs  loader.rs  mod.rs  models.rs
src/engine/: chapter_flow.rs  commands.rs  condition.rs  handlers.rs  logic.rs  map.rs  mod.rs  navigation.rs  outcome.rs  state.rs  system.rs
src/save/: checkpoint.rs  migration.rs  mod.rs  snapshot.rs  store.rs
tests/: checker.rs  content_engine.rs  e2e.rs  session.rs
(+90 files in other folders)
