[package]
name = "darkbluff"
version.workspace = true
edition.workspace = true

[dependencies]
darkbluff-core = { path = "../darkbluff-core" }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
